Fixed styling issues, concerning z-index on progress bar

--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -10,15 +10,14 @@ html, body
   height: auto !important
   height: 100%
   margin: 0 auto -100px
-
-/* Footer */
-.footer, .push
-  height: 100px
-
-.footer
   background-color: black
+
+.body-wrapper
+  background-color: white
+  padding-bottom: 10px
 
 /* Playlist */
 
 .remove-btn
   @include border-radius(80px)
+
